# BLIP

./: .gitignore  README.md  pyproject.toml
docs/: 00_overview.md  01_problem_definitions.md  02_data_workloads.md  03_architecture.md  04_algorithms.md  05_evaluation_plan.md  06_roadmap.md  07_testing.md  sync.md
src/blip/: __init__.py  _types.py  config.py  pipeline.py
src/blip/algo/: adaptive.py  fastpath.py  prune.py  refine.py  topk.py
src/blip/cache/: disk.py
src/blip/cost/: accounting.py  model.py
src/blip/llm/: client.py  judge.py  prompts.py  usage.py
src/blip/rank/: base.py  embedding.py  llm.py
src/blip/runner/: experiment.py  precompute.py
src/blip/text/: blocks.py  segmenter.py  tokens.py
src/blip/workloads/: base.py  paper.py
tests/: test_cost.py  test_fastpath.py  test_judge.py  test_prune.py  test_refine.py  test_segmenter.py  test_text.py
tests/fakes/: llm.py
