[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "blip"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.30",
    "pysbd>=0.3.4",
    "tiktoken>=0.7",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]

[tool.setuptools.packages.find]
where = ["src"]
